main z-index fix + stats margin/padding

--- a/Styles/stats.css
+++ b/Styles/stats.css
@@ -1,11 +1,16 @@
 main
 {
-    margin-top: 18vh;
+    margin-top: 12vh;
     margin-bottom: 15vh;
     font-size: 17px;
 }
 
-.section{
+.speechBubble
+{   
+    padding: 3vw 3vw 3vw 3vw;
+}
+
+section{
     position: relative;
     width: 100%;
     height: 100%;
